Cleanup User Controller/Model, add FormRequests
